# gguf-index

./: .gitignore  FUTURE_WORK.md  README.md  gguf_index.db  pyproject.toml
gguf_index/: __init__.py  api.py  cli.py  index.py  parquet.py  storage.py
tests/: test_api.py  test_index.py  test_parquet.py  test_storage.py
